Fix the play buttons on mobile (took me way too long to figure this out)

--- a/css/style.css
+++ b/css/style.css
@@ -744,7 +744,6 @@ p {
 
     .col-xs-1 {
         width: 20%;
-        margin-bottom: 2em;
     }
 
     .artisttrack {
